--- a/demo/builder/index.css
+++ b/demo/builder/index.css
@@ -1,11 +1,80 @@
-/* WIP */
-
-#app .shogi__board {
-  width: 320px;
-  height: 320px;
-  margin: 10px;
+html, body {
+  background-color: #efefef;
+  margin: 0;
+  padding: 0;
+  color: #444;
 }
 
-#app .shogi__koma {
+body {
+  font-family: "Sawarabi Mincho", serif;
+}
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 540px;
+  padding: 0 7px;
+  box-sizing: border-box;
+}
+
+#board {
+  position: relative;
+  width: 100%;
+}
+
+#board:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+
+.mochigomas {
+  margin: 7px 0;
+  width: 70%;
+}
+
+#koutei_mochigomas {
+  margin-left: 30%;
+}
+
+.minus_buttons {
+  width: 70%;
+  height: 20px;
+  display: flex;
+}
+
+#koutei_minus_buttons {
+  margin-left: 30%;
+  flex-direction: row-reverse;
+}
+
+.minus_button {
+  flex: 1;
+}
+
+.minus_button button {
+  display: block;
+  border: 1px solid #444;
+  border-radius: 3px;
+  width: 25px;
+  height: 20px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.shogi__board {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.shogi__cell,
+.shogi__koma {
   cursor: pointer;
+}
+
+.buttons {
+  margin: 20px 7px;
 }
